# dynonet

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
RLC/: RLC_OE_fit.py  RLC_OE_fit_nobatch.py  RLC_generate_id.py  RLC_generate_test.py  RLC_wiener_fit.py  linear_system_fit.py
WH2009/: WH2009.py  WH2009_train.py
doc/paper/: ms.bib  ms.tex
examples/: linearsiso_examples.py
examples/BW/: BW_PBO_SOS_train_BFGS.py  BW_PBO_SOS_train_BFGS_refine.py  BW_PBO_test.py  BW_PBO_test_SOS.py  BW_PBO_train_BFGS_refine.py  BW_PWH_test.py  BW_PWH_test_deep.py  BW_PWH_train.py  BW_PWH_train_BFGS.py  BW_PWH_train_deep.py  BW_import.py  BW_plot.py  BW_test.py  BW_train.py  README.md  common.py
examples/CR/: CR_WH_fit.py  CR_WH_fit_refine.py  CR_large_plot.py  CR_test.py  common.py
paper/: ms.bib  ms.tex
slides/: preamble.tex  presentation_main.tex
test_code/: .gitignore  correlate_example.py  einsum_example.py  filter_example.py  filter_initial_cond_ab.py  filter_mimo.py  filter_mimo_channels_last.py  find_initial_cond_ab.py  install_pypy.txt  linearsiso_fun_example.py  linearsiso_module_example.py  linearsiso_module_time.py  mimo_module_example.py  mimo_secondorder_module_example.py  run_tests.bat  secondorder_module_example.py  stability_second_order.py  stable_ocs_param.py  stable_param.py  torch_convolutional.py  torch_convolutional_FIR.py
tmp/: backproptest1.py  backproptest2.py  new-relu.py
torchid/: linear_dyn.py  linear_dyn_sp.py  linearmimo.py  linearsiso.py  linearsiso_initial_condition.py  linearsiso_nobatch.py
util/: filtering.py  metrics.py
(+180 files in other folders)
