[wheel]
universal = 1

[metadata]
name = dynonet
version = 0.0.1
author = Marco Forgione and Dario Piga
author_email = Thomas.McDermott@PNNL.gov
description = dynoNet: A neural network architecture for learning dynamical systems
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = MIT
url = https://github.com/temcdrm/dynonet
project_urls =
    Bug Tracker = https://github.com/temcdrm/dynonet/issues
classifiers = 
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = torchid,util
install_requires =
    numpy>=1.19.4
    scipy>=1.5.4
    matplotlib>=3.3.3
    pandas>=1.1.4
    torch>=1.4

